fix: freez ui after cahnge languange

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,6 @@
 {
   "enabled": "Aktiviert",
+  "disabled": "Deaktiviert",
   "targetLanguage": "Zielsprache:",
   "hint": "💡 Text auswählen für automatische Übersetzung",
   "saved": "✓ Gespeichert"
