--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,5 +1,6 @@
 {
   "enabled": "Activado",
+  "disabled": "Desactivado",
   "targetLanguage": "Idioma de destino:",
   "hint": "💡 Selecciona texto para traducción automática",
   "saved": "✓ Guardado"
