--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -1,5 +1,6 @@
 {
   "enabled": "Abilitato",
+  "disabled": "Disabilitato",
   "targetLanguage": "Lingua di destinazione:",
   "hint": "💡 Seleziona il testo per la traduzione automatica",
   "saved": "✓ Salvato"
